# rust-credence

./: .gitignore  .goreleaser.yml  CONFIGURATION.md  Cargo.toml  GUIDE.md  README.md  TIPS.md  TODO
assets/: .gitignore
assets/configuration/: server.yaml
assets/examples/: .gitignore  README.md  generate-self-signed-keys.sh
assets/examples/advanced/.credence/: credence.yaml
assets/examples/basic/: index.r.md
assets/examples/blog/: index.r.md  new-project.r.md  robots.txt  thoughts-about-credence.r.md
assets/examples/blog/.credence/: credence.yaml
assets/examples/blog/.credence/key/: certificates.pem  private-key.pem
assets/examples/blog/.credence/templates/: catalog.jinja  default.jinja
assets/examples/blog/.credence/templates/bases/: default.jinja
assets/examples/blog/.credence/templates/fragments/: head.jinja
assets/examples/blog/.credence/tls/: cert.pem  generate.sh  key.pem
assets/examples/blog/_/: blog.css
assets/examples/blog/food/: breakfast.r.md  index.r.md  second-breakfast.r.md  third-breakfast.r.md
assets/examples/blog/opinions/: first-post.r.md  index.r.md  new-project.r.md  thoughts-about-credence.r.md
assets/examples/defaults/: index.r.md
assets/examples/defaults/.credence/: credence.yaml
assets/examples/hello-world/: .gitignore  index.r.md
assets/examples/multi/: index.r.md
assets/examples/multi/.credence/: credence.yaml
assets/examples/multi/.credence/keys/site1/: certificates.pem  private-key.pem
assets/examples/multi/.credence/keys/site2/: certificates.pem  private-key.pem
assets/examples/multi/.credence/templates/: default.jinja
assets/systemd/: credence.service
assets/templates/: default.html
cli/: Cargo.toml
cli/src/: cli.rs  errors.rs  main.rs  run.rs  start.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  configuration.rs  errors.rs  main.rs  router.rs  run.rs  serve.rs  start.rs
documentation/: acme.md  advanced.md  basics.md  tips.md
scripts/: build  install-for-user  release
src/: errors.rs  main.rs  router.rs  serve.rs
src/configuration/: annotations.rs  caching.rs  constants.rs  encoding.rs  mod.rs  paths.rs  protection.rs  redirect.rs  render.rs  requests.rs  server.rs  uri.rs
src/configuration/listen/: axum.rs  listen.rs  mod.rs  tls.rs
src/middleware/: authorization.rs  constants.rs  mod.rs  render.rs  status.rs  uri.rs
src/parse/: date_time.rs  duration.rs  mod.rs
src/render/: annotations.rs  constants.rs  mod.rs  rendered_page.rs  renderer.rs  templates.rs
