[workspace]
resolver = "3"
members = ["cli", "library"]

[patch.crates-io]
credence-lib = { path = "library" }
compris = { path = "../rust-compris/library" }
compris-macros = { path = "../rust-compris/macros" }
kutil-cli = { path = "../rust-kutil/cli" }
kutil-cli-macros = { path = "../rust-kutil/cli-macros" }
kutil-http = { path = "../rust-kutil/http" }
kutil-io = { path = "../rust-kutil/io" }
kutil-std = { path = "../rust-kutil/std" }
kutil-std-macros = { path = "../rust-kutil/std-macros" }
kutil-transcoding = { path = "../rust-kutil/transcoding" }

[profile.dev]
debug = false

[profile.release]
# Especially important for wasm!
strip = "debuginfo"
lto = "thin"        # true is *very* slow to build!
