[workspace]
resolver = "3"
members = ["cli", "library"]

[patch.crates-io]
credence-lib = { path = "library" }
compris = { path = "../rust-compris/library" }
compris-macros = { path = "../rust-compris/macros" }
kutil = { path = "../rust-kutil/library" }
kutil-cli-macros = { path = "../rust-kutil/cli-macros" }
kutil-std-macros = { path = "../rust-kutil/std-macros" }

[profile.dev]
debug = false

[profile.release]
# Especially important for wasm!
strip = "debuginfo"
lto = "thin"        # true is *very* slow to build!
