[package]
edition = "2024"

name = "credence"
description = "An unfussy web server designed for straightforward authoring and scalable performance"
version = "0.0.3"
rust-version = "1.90"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/credence"
documentation = "https://docs.rs/credence"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = [
    "web-programming",
    "web-programming::http-server",
] # https://crates.io/category_slugs
keywords = ["web", "axum", "tower"]

[dependencies]
credence-lib = "=0.0.3"
clap = { version = "4.5.48", features = ["derive", "string"] }
clap_complete_command = "0.6.1"
kutil = { version = "=0.0.1", features = ["cli", "http", "clap", "axum"] }
mimalloc = "0.1.48"
thiserror = "2.0.17"
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
